<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="center_vertical"
                  android:gravity="center">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="20dp"
                      android:orientation="vertical">

            <EditText style="@style/textbox"
                      android:id="@+id/email"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />

            <EditText style="@style/textbox"
                      android:id="@+id/password"
                      android:inputType="textPassword"
                      android:hint="@string/password"
                      android:layout_marginTop="10dp"/>

            <Button style="@style/ButtonbtnBlue"
                    android:layout_marginTop="20dp"
                    android:onClick="loginBtnPressed"
                    android:text="@string/login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                      android:layout_marginTop="15dp"
                      android:layout_marginBottom="5dp"
                      android:clickable="true"
                      android:visibility="gone"
                      android:layout_gravity="center"
                      android:onClick="actionLostpassword"
                      android:textColor="@android:color/black"
                      android:text="@string/login_fpswd"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>