<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:background="@drawable/notification_item_background_color"
              android:layout_margin="6dp"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text"
        android:gravity="center|top"
        android:layout_marginTop="5dp"
        android:textColor="@color/holo_blue"
        android:padding="5dp"
        android:textSize="19sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:background="@color/holo_blue"/>

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text"
        android:gravity="center|top"
        android:textColor="@color/clouds"
        android:padding="5dp"
        android:layout_marginBottom="7dp"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:paddingTop="1dp"
        android:background="@color/holo_divider"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_button"
            style="@style/ButtonbtnBlue"
            android:background="@drawable/custom_holo_btn"
            android:layout_weight="50"
            android:text="@string/dialog_no"
            android:textColor="@color/clouds"
            android:layout_width="match_parent"
            android:layout_marginRight="0.3dp"
            android:layout_height="match_parent"/>

        <Button
            style="@style/ButtonbtnBlue"
            android:id="@+id/yes_button"
            android:background="@drawable/custom_holo_btn"
            android:layout_weight="50"
            android:text="@string/dialog_yes"
            android:textColor="@color/clouds"
            android:layout_marginLeft="0.3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>


</LinearLayout>